<resources>
    <string name="app_name">OTT Service</string>
    <string name="get_started_msg">Unlimited Movies, TV Shows, and more.\nWatch Anywhere, Anytime.</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="google">Google</string>
    <string name="don_t_have_account_yet">Don\'t have account yet?</string>
    <string name="premium"><u>Premium</u></string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="phone_number">Phone Number</string>
    <string name="_phone_number"><u>Phone Number</u></string>
    <string name="privacy_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="next">Next</string>
    <string name="login">LOGIN</string>
    <string name="_login">Login</string>
    <string name="we_have_sent_otp">We Have Sent OTP</string>
    <string name="use_the_phone_number_to_register_or_login_ott">Use the phone number to register or login OTT</string>
    <string name="add_to_my_list">Add to my List</string>


    <!--navigation drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="video_thumbnail">Video Thumbnail</string>
    <string name="free">Free</string>


    <!--<string name="font">sans-serif-condensed</string>-->
    <string name="font">sans-serif</string>
    <string name="play">play</string>
    <string name="home">Home</string>
    <string name="movies">Movies</string>
    <string name="live">Live</string>
    <string name="tv_shows">TV Shows</string>
    <string name="recommended_live">Recommended Live</string>
    <string name="news_inside_the_country">News Inside The Country</string>
    <string name="live_sports">Live Sports</string>
    <string name="go_premium">Go Premium</string>
    <string name="fagun_theke_fagune">Fagun Theke Fagune</string>
    <string name="director">Director:</string>
    <string name="amitabh_reza">Amitabh Reza</string>
    <string name="_3_579_watching_now">3,579 watching now</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dhallywood">Dhallywood</string>
    <string name="korean">Korean</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="video">Video</string>
    <string name="rework">Rework</string>
    <string name="_2022">2022</string>
    <string name="_1hr_2min">1hr 2min</string>
    <string name="heart">Heart</string>
    <string name="_345_reviews">345 Reviews</string>
    <string name="featured_items">Featured Items</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur tempor incididunt ut labore et dolore</string>
    <string name="kolkata">Kolkata</string>
    <string name="recently_added">Recently Added</string>
    <string name="tamil">Tamil</string>
    <string name="tv_series">TV Series</string>
    <string name="popular_drama">Popular Drama</string>
    <string name="recommended">Recommended</string>
    <string name="watch_trailers">Watch Trailers</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="login_signup">Login / Signup</string>
    <string name="logout">Logout</string>
    <string name="select_your_country_amp_enter_phone_number"><![CDATA[Select Your Country & Enter Phone Number]]></string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="choose_your_plans">Choose Your Plans</string>
    <string name="choose_your_payment_methods">Choose Your Payment Methods</string>
    <string name="password">Password</string>
    <string name="monthly_plan">Monthly Plan</string>
    <string name="pay_with_bkash">Pay With bKash</string>
    <string name="signup_in">SIGNUP IN</string>
    <string name="premium_account">PREMIUM ACCOUNT</string>
    <string name="_password"><u>Password</u></string>
    <string name="login_with">Login with</string>


</resources>