<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_22ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:gravity="center"
        android:text="@string/use_the_phone_number_to_register_or_login_ott" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_2sdp"
        app:cardCornerRadius="3dp">

        <include
            android:id="@+id/phone_number"
            layout="@layout/phone_number_layout" />
    </androidx.cardview.widget.CardView>


    <CheckBox
        android:id="@+id/privacy_policy_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy" />

    <Button
        android:id="@+id/next_btn"
        style="@style/nextBtnStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_with"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_with_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:text="@string/_password"
            android:textColor="@color/primary"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>