<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/thumbnail_iv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:background="@drawable/rounded_corner_for_iv"
            android:contentDescription="@string/video_thumbnail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/heart_shape_iv"
            style="@style/heartShapeImageView"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:contentDescription="@string/add_to_my_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/free_or_premium_tv"
            style="@style/freeFlagTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/free_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/videoTitleTextViewStyle"
        android:text="@string/fagun_theke_fagune"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/movieGenreTextViewStyle"
            android:textSize="@dimen/video_genre_text_size"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:text="@string/director"/>
        <TextView
            android:id="@+id/director_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/movieGenreTextViewStyle"
            android:textSize="@dimen/video_genre_text_size"
            android:text="@string/amitabh_reza"
            android:textColor="@color/black"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/watching_now_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/movieGenreTextViewStyle"
        android:text="@string/_3_579_watching_now"/>


</LinearLayout>