<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp">

    <TextView
        style="@style/textView"
        android:text="@string/select_your_country_amp_enter_phone_number" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_2sdp"
        app:cardCornerRadius="3dp">

        <include
            android:id="@+id/phone_number_container"
            layout="@layout/phone_number_layout" />
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_6sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/textView"
                android:text="@string/first_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_container"
                style="@style/editText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name_edtx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/textView"
                android:text="@string/last_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_container"
                style="@style/editText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_edtx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


    </LinearLayout>

    <TextView
        style="@style/textView"
        android:text="@string/email_address" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_container"
        style="@style/editText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edtx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/textView"
        android:text="@string/password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_container"
        style="@style/editText"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edtx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/textView"
        android:text="@string/confirm_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_container"
        style="@style/editText"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_edtx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/textView"
        android:text="@string/choose_your_plans" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_2sdp"
        app:cardCornerRadius="@dimen/_3sdp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/plan_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled"
            app:boxStrokeWidth="0dp">

            <AutoCompleteTextView
                android:id="@+id/plan_edtx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="none"
                android:text="@string/monthly_plan" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        style="@style/textView"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/choose_your_payment_methods" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_2sdp"
        app:cardCornerRadius="@dimen/_3sdp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/payment_method_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled"
            app:boxStrokeWidth="0dp">

            <AutoCompleteTextView
                android:id="@+id/payment_method_edtx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="none"
                android:text="@string/pay_with_bkash" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <Button style="@style/nextBtnStyle" />


</LinearLayout>